[build-system]
requires = ["setuptools>=70.1.0"]
build-backend = "setuptools.build_meta"


[project]
name = "CodingTools2"
version = "2.2.1"
description = "This module contains tools that you can use for development."

readme = "README.md"
license = {file="LICENSE"}

requires-python = ">=3.12"
dependencies = [
]

authors = [
    {name="AtoKashinoki", email="atokashinoki@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]


[project.urls]
"Homepage" = "https://github.com/AtoKashinoki/CodingTools"
"Bug Tracker" = "https://github.com/AtoKashinoki/CodingTools/issues"


[project.scripts]
initialize = "CodingTools2.Commands:initialize"
